Refactor sync online-first y permisos por rol

--- a/.env.example
+++ b/.env.example
@@ -3,10 +3,8 @@
 # Users configure this via the Secrets panel in the AI Studio UI.
 GEMINI_API_KEY="MY_GEMINI_API_KEY"
 
-# Supabase backend (required for production mode)
-# Example URL: https://YOUR_PROJECT_ID.supabase.co
-VITE_SUPABASE_URL="https://YOUR_PROJECT_ID.supabase.co"
-VITE_GOOGLE_SHEETS_URL=https://script.google.com/macros/s/tuid/exec"
+# Google Sheets Web App URL (required)
+VITE_GOOGLE_SHEETS_URL="https://script.google.com/macros/s/TU_ID/exec"
 
 # APP_URL: The URL where this applet is hosted.
 # AI Studio automatically injects this at runtime with the Cloud Run service URL.
