--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,10 @@
-# GEMINI_API_KEY: Required for Gemini AI API calls.
-# AI Studio automatically injects this at runtime from user secrets.
-# Users configure this via the Secrets panel in the AI Studio UI.
-GEMINI_API_KEY="MY_GEMINI_API_KEY"
+# Frontend
+VITE_API_BASE_URL="/api"
 
-# Google Sheets Web App URL (required)
-VITE_GOOGLE_SHEETS_URL="https://script.google.com/macros/s/TU_ID/exec"
-
-# APP_URL: The URL where this applet is hosted.
-# AI Studio automatically injects this at runtime with the Cloud Run service URL.
-# Used for self-referential links, OAuth callbacks, and API endpoints.
-APP_URL="MY_APP_URL"
+# Backend
+PORT=4000
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/diario_turno"
+JWT_SECRET="cambia-este-secreto"
+JWT_EXPIRES_IN="12h"
+CORS_ORIGIN="http://localhost:3000,http://72.62.201.8"
+SEED_DEFAULT_USERS=true
