--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,6 @@ PORT=4000
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/diario_turno"
 JWT_SECRET="cambia-este-secreto"
 JWT_EXPIRES_IN="12h"
+JSON_LIMIT="25mb"
 CORS_ORIGIN="http://localhost:3000,http://72.62.201.8"
 SEED_DEFAULT_USERS=true
